--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dependencies": {
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
-        "@waves/waves-transactions": "^3.3.11",
         "@waves/waves-crypto": "^2.0.4",
+        "@waves/waves-transactions": "^3.3.11",
         "axios": "^0.18.0",
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
@@ -18,9 +18,11 @@
         "bootstrap": "^4.1.3",
         "express": "^4.16.4",
         "jquery": "^1.9.3",
+        "node-fetch": "^2.6.0",
         "popper.js": "^1.14.7",
         "react": "^16.5.2",
-        "react-dom": "^16.5.2"
+        "react-dom": "^16.5.2",
+        "underscore": "^1.9.2"
     },
     "devDependencies": {
         "@babel/core": "^7.1.2",
