--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "dependencies": {
         "@babel/preset-env": "^7.1.0",
         "@babel/preset-react": "^7.0.0",
-        "@waves/waves-transactions": "^3.3.11",
         "@waves/waves-crypto": "^2.0.4",
+        "@waves/waves-transactions": "^3.3.11",
         "axios": "^0.18.0",
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
+        "babel-loader": "^8.1.0",
         "babel-preset-env": "^1.7.0",
         "bootstrap": "^4.1.3",
         "express": "^4.16.4",
-        "jquery": "^1.9.3",
+        "jquery": "^3.4.1",
         "popper.js": "^1.14.7",
         "react": "^16.5.2",
-        "react-dom": "^16.5.2"
+        "react-dom": "^16.5.2",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11"
     },
     "devDependencies": {
         "@babel/core": "^7.1.2",
         "@babel/runtime-corejs2": "^7.0.0",
         "@wordpress/babel-preset-default": "^2.1.0",
         "autoprefixer": "^9.1.3",
-        "babel-loader": "^8.0.4",
         "babel-preset-es2015": "^6.24.1",
-        "cross-env": "^5.2.0",
-        "webpack": "^4.17.2",
-        "webpack-cli": "^3.1.0"
+        "cross-env": "^5.2.0"
     }
 }
