--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@babel/preset-react": "^7.0.0",
         "@waves/waves-crypto": "^2.0.4",
         "@waves/waves-transactions": "^3.3.11",
+        "@waves/waveskeeper-types": "0.0.6",
         "axios": "^0.18.0",
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
